--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- Basic options --- #
 
 # Name of website
-title: Graham Latsa Portfolio
+title: Who Is Graham
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: A little about Graham Latsa
 
 # Your name to show in the footer
 author: Some Person
@@ -12,8 +12,9 @@ author: Some Person
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Author's home: "https://deanattali.com"
+  Portfolio: "Portfolio"
+  Skills: "Skills"
+  Future Projects: "futureprojects"
 
 # --- Logo --- #
 
@@ -35,11 +36,8 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  rss: true
+  email: "glatsa@syr.edu"
+  github: glatsa
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -65,7 +63,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+#url-pretty: "MyWebsite.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -161,7 +159,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "America/Denver"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
