--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Some Person
 
 navbar-links:
   Portfolio: "Portfolio"
-  Skills & Courses: "Skills_Courses.md"
+  Skills & Courses: "Skills_Courses"
   Future Projects: "futureprojects"
 
 # --- Logo --- #
