--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Some Person
 navbar-links:
   Portfolio: "Portfolio"
   Skills & Courses: "Skills_Courses"
-  Future Projects: "futureprojects"
+  Other Projects & Learning Goals: "futureprojects"
 
 # --- Logo --- #
 
