--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Who Is Graham
 description: A little about Graham Latsa
 
 # Your name to show in the footer
-author: Some Person
+author: Graham Latsa
 
 # --- List of links in the navigation bar --- #
 
