--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Graham Latsa
 navbar-links:
   Portfolio: "Portfolio"
   Skills & Courses: "Skills_Courses"
-  Other Projects & Learning Goals: "futureprojects"
+  Future Development: "futureprojects"
 
 # --- Logo --- #
 
