--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author: Graham Latsa
 navbar-links:
   Portfolio: "Portfolio"
   Skills & Courses: "Skills_Courses"
+  Resumé: "Resume"
   Future Development: "futureprojects"
 
 # --- Logo --- #
