--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ navbar-links:
   Portfolio: "Portfolio"
   Skills & Courses: "Skills_Courses"
   Resumé: "Resume"
-  Future Development: "futureprojects"
+  Exploration: "futureprojects"
 
 # --- Logo --- #
 
